[gd_scene load_steps=28 format=2]

[ext_resource path="res://WhiteColorShader.shader" type="Shader" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/PlayerDetectionZone.tscn" type="PackedScene" id=3]
[ext_resource path="res://Overlap/SoftCollision.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Enemies/WanderController.tscn" type="PackedScene" id=6]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/BatBoss/BatBoss.gd" type="Script" id=8]
[ext_resource path="res://Shadows/LargeShadow.png" type="Texture" id=9]
[ext_resource path="res://Enemies/BatBoss/BatBoss2.png" type="Texture" id=10]
[ext_resource path="res://Enemies/BatBoss/BatBossDive.png" type="Texture" id=11]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 1 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 32, 20 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "FlyOver",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "Dive",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 5.0

[sub_resource type="CapsuleShape2D" id=11]
radius = 11.0
height = 4.0

[sub_resource type="CircleShape2D" id=12]
radius = 309.04

[sub_resource type="CircleShape2D" id=13]

[sub_resource type="CircleShape2D" id=14]
radius = 6.0

[sub_resource type="Animation" id=15]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=16]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="BatBoss" type="KinematicBody2D"]
collision_layer = 2147483664
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
position = Vector2( 0, -12 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 9 )
animation = "Idle"
frame = 3
playing = true
offset = Vector2( 0, -12 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -13 )
shape = SubResource( 11 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 12

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.219608 )
shape = SubResource( 12 )

[node name="Hitbox" parent="." instance=ExtResource( 7 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -10 )
shape = SubResource( 13 )

[node name="SoftCollision" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 14 )

[node name="WanderController" parent="." instance=ExtResource( 6 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 15 )
anims/Stop = SubResource( 16 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="DiveTimer" type="Timer" parent="."]

[node name="LungeTimer" type="Timer" parent="."]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DiveTimer" to="." method="_on_DiveTimer_timeout"]
[connection signal="timeout" from="LungeTimer" to="." method="_on_LungeTimer_timeout"]

[editable path="Hurtbox"]

[editable path="PlayerDetectionZone"]

[editable path="Hitbox"]

[editable path="SoftCollision"]
